# agent9

./: .gitignore  AGENTS.md  README.md  wiki-redirect.md
alacritty9/: .gitignore  PORT-NOTES.md  PROTOCOL.md  README.md  fetch.sh
alacritty9/.cargo/: config.toml
alacritty9/release/: CHANGELOG  alacritty9  make-tarball.sh
alacritty9/shim/glutin/: Cargo.toml
alacritty9/shim/glutin/examples/: api_surface.rs
alacritty9/shim/glutin/src/: api.rs  config.rs  context.rs  display.rs  error.rs  lib.rs  prelude.rs  surface.rs
alacritty9/test/: echoev.c
alacritty9/test/glclear/: Cargo.toml
alacritty9/test/glclear/.cargo/: config.toml
alacritty9/test/glclear/src/: main.rs
alacritty9/test/headless/: Cargo.toml
alacritty9/test/headless/src/: main.rs
alacritty9/win/: gl9win2.c  mkfile
cc9/: .gitignore  README.md
cc9/host/: build-libm.sh  build-modules.sh  build-runtime.sh  cc9  deliver.py  elf2aout.c  elf2aout.py  n9link.c  regen-libcxx.sh  run-libcxx-tests.sh  run-tests.sh
cc9/kernel/: README.md  avx-ymm-preservation.md  exec_probe_jit.c  wxallow-jit.diff
cc9/native/: README.md  build-clang.sh  build-lld.sh  build-llvm-support.sh  cc-on9.rc  cc.rc  cc1.template  cc9-clang  cc9-clang++  cc9-link  g1_support.cpp  gen-cc1-template.sh  toolchain.cmake
cc9/runtime/: complex_builtins.c  crt0.c  cxxrt.cpp  exception_ptr.cpp  fenv.c  fs.c  int128.c  n9libc.c  net9.c  netcompat.c  poll.c  posix_llvm.c  printf.c  pthread.c  setjmp.s  shm9.c  stdio.c  tochars.cpp  typeinfo_min.cpp  wchar.c  xlocale.c
cc9/test/: bfjit.cpp  bintime_test.c  clonepath.c  delie_gate.c  delie_gate2.c  dnsfetch_gate.c  dnsnull_gate.c  errnogate.c  errprobe.c  exec_probe.c  freelist_gate.c  hi.c  hicpp.cpp  json_test.cpp  libgen_test.c  main_test.cpp  malloc_test.cpp  min.s  min_clang.c  mkaout_min.py  mkdirgate.c  msggate.c  n9syscall.s  netgate.c  plan9.ld  pool_gate.c  raytrace.cpp  reap_gate.c  regprobe.cpp  regprobe.s  run_probe.rc  segprobe.c  segshm_gate.c  sigtab_gate.c  spawn_gate.c  srvfd_gate.c  stackbounds.c  stl_test.cpp  transport_echo_gate.c  usablesize.c  (+2 more)
docs/: development.md
docs/plans/: 2026-05-16-vt-console-daemon.md  2026-06-25-pi9-as-9p-filesystem.md  2026-07-01-gl9-opengl-mesa.md  2026-07-15-gpu9-broadwell-3d.md  2026-07-15-ladybird9-browser.md
docs/wiki/: README.md  SCHEMA.md  index.md
dosbox9/: .gitignore  PORT-NOTES.md  README.md  fetch.sh
dosbox9/host/: build-dosbox.sh  build-sdl.sh  deploy.sh  fetch-games.py  gen-confs.py  genconfig.py  prep-games.sh  shoot-games.sh
dosbox9/release/: CHANGELOG  dosbox.conf  dosbox9  make-tarball.sh
fonts/: README.md
gl9/: .gitignore  README.md  fetch.sh
gl9/host/: Dockerfile  build-gl9.py  (+3 more)
gpu9/: CHANGELOG  NOTES.md  README.md  mkfile
ladybird9/: .gitignore  README.md  fetch.sh
llvm9/: .gitignore  NOTES.md
neovim9/: .gitignore  PLAN.md  README.md
node9/: DOCUMENTATION.md  PLAN.md  README.md
pac9/: README.md  install.rc  pac9  registry  release.sh  test.rc
python9/: README.md
release/: RUNNING.md  run-linux.sh  run-macos.sh  run-windows.bat
rust9/: .gitignore  README.md  ROADMAP.md  RUSTC-PORT.md
scripts/: README.md  build-pi9.sh  launch-netsurf.rc  run-fetch.rc  run-install.rc  run-mk.rc  vm-build-status  vm-fetch-status  vm-rc
servo9/: .gitignore
servo9/port/mozjs/cratetest/: Cargo.toml
servo9/port/mozjs/cratetest/src/: lib.rs
servo9/port/mozjs/rustshim/: Cargo.toml
servo9/port/mozjs/rustshim/src/: lib.rs
servo9/port/plan9-getrandom/: Cargo.toml
servo9/port/plan9-getrandom/src/: lib.rs
src/: deploy.rc  riostart
tailscale9/: README.md
tools/: build-public-wiki.sh  decode_cells.py  p9  p9sync  typekey.py
zig9/: .gitignore  README.md  fetch.sh
(+731 files in other folders)
