[package]
name = "glutin"
version = "0.32.3"
edition = "2021"
description = "Plan 9 shim: glutin's public API (the subset Alacritty uses) over gl9egl, a statically-linked minimal libEGL on OSMesa. No dlopen, no build.rs backend gates."
license = "Apache-2.0"

[workspace]

[dependencies]
raw-window-handle = "0.6"

[features]
# All feature names alacritty (and its own features) may request from glutin.
# They are no-ops: the only backend is the statically linked gl9egl.
default = []
egl = []
wgl = []
glx = []
x11 = []
wayland = []
