[package]
name = "glclear"
version = "0.1.0"
edition = "2021"
description = "P3 gate: winit plan9 backend + glutin shim + gl9egl + Mesa, end to end"

[workspace]

[dependencies]
winit = { path = "../../vendor/winit", default-features = false, features = ["rwh_06"] }
glutin = { path = "../../shim/glutin" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
